<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="#fff"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@id/radio0"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:checked="true"
            android:text="@string/str20149" />

        <RadioButton
            android:id="@id/radio1"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/str20150" />

        <RadioButton
            android:id="@id/radio2"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/str20151" />
    </RadioGroup>

    <EditText
        android:id="@id/et_word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12.0dip"
        android:ems="10"
        android:hint="请输入查询关键字"
        android:text="思"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@id/btn_search"
        android:layout_width="140.0dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12.0dip"
        android:text="@string/str20152" />

</LinearLayout>