<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="46.0dip"
        android:background="@drawable/toolbar" >

        <TextView
            android:id="@id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffffff" />

        <Button
            android:id="@id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="46.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_button"
            android:text="@string/str20142"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#ffffffff" />
    </RelativeLayout>

    <ListView
        android:id="@id/lv_catelog"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginBottom="4.0dip"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:background="@drawable/item_bg"
        android:cacheColorHint="#00000000"
        android:fadingEdge="none"
        android:fastScrollEnabled="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6.0dip"
        android:layout_marginRight="6.0dip" >

        <Button
            android:id="@id/btn_all"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_button"
            android:text="@string/str20143"
            android:textColor="#ffffffff"
            android:textSize="14.0sp" />

        <Button
            android:id="@id/btn_search"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_marginLeft="3.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_button"
            android:text="@string/str20144"
            android:textColor="#ffffffff"
            android:textSize="14.0sp" />

        <Button
            android:id="@id/btn_type"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_marginLeft="3.0dip"
            android:layout_marginRight="3.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_button"
            android:text="@string/str20145"
            android:textColor="#ffffffff"
            android:textSize="14.0sp" />

        <Button
            android:id="@id/btn_author"
            android:layout_width="0.0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/btn_button"
            android:text="@string/str20146"
            android:textColor="#ffffffff"
            android:textSize="14.0sp" />
    </LinearLayout>

    <include
        android:id="@id/ll_ad"
        layout="@layout/ad" />

</LinearLayout>